--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "A tiny, simple and fast futures implementation.",
   "main": "proph.js",
+  "scripts": {
+    "test": "./node_modules/.bin/tape test/*.js"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/L8D/proph.git"
